<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ian\'s Language Tutor</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Ian\'s Language Tutor!</string>
    <string name="select_lang">Please select a language.</string>
    <string name="choose_lang">Please select which language is visible.</string>


    <string name="title_activity_upgrade">UpgradeActivity</string>
    <string name="title_activity_language_options">LanguageOptions</string>
    <string name="loading">Loading....</string>
    <string name="lesson">Lesson....</string>
    <string name="english">English</string>
    <string name="download">Download</string>
    <string name="language">Language</string>
    <string name="strcontinue">Continue</string>
    <string name="mediumText">Medium Text</string>
</resources>
